Compositor, Directional Blur Node - Wrap do not work #102796

Closed
opened 2022-11-26 22:04:23 +01:00 by Hoang Duy Tran · 7 comments
Member

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-20 21:42, hash: blender/blender@e83f46ea76

Short description of error
Tried in this example:
Screenshot 2022-11-26 at 21.02.49.png

This file:
20221128_compositor_driectional_blur_wrap_do_not_work_0001.blend

Turn wrap on/off and it doesn't appear to:

Wraps the image on the X and Y axis to fill in areas, that become transparent from the blur effect.

as documented here:
https://docs.blender.org/manual/en/dev/compositing/types/filter/directional_blur.html

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2022-11-20 21:42, hash: `blender/blender@e83f46ea76` **Short description of error** Tried in this example: ![Screenshot 2022-11-26 at 21.02.49.png](https://archive.blender.org/developer/F13972341/Screenshot_2022-11-26_at_21.02.49.png) This file: [20221128_compositor_driectional_blur_wrap_do_not_work_0001.blend](https://archive.blender.org/developer/F13972332/20221128_compositor_driectional_blur_wrap_do_not_work_0001.blend) Turn wrap on/off and it doesn't appear to: ``` Wraps the image on the X and Y axis to fill in areas, that become transparent from the blur effect. ``` as documented here: https://docs.blender.org/manual/en/dev/compositing/types/filter/directional_blur.html
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk
Member

Added subscriber: @Blendify

Added subscriber: @Blendify
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Looking at the code this property does not do anything.

Its unclear if it ever did anything.

Looking at the code this property does not do anything. Its unclear if it ever did anything.

This issue was referenced by blender/blender@c082ebfaa5

This issue was referenced by blender/blender@c082ebfaa5044510109c9194855be92308b6dad8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Aaron Carlisle self-assigned this 2022-12-07 22:50:02 +01:00

This issue was referenced by 9767

This issue was referenced by 9767
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-manual#102796
No description provided.