source/blender/makesrna/intern/rna_nodetree.c
@@ -7800,11 +7800,6 @@ static void def_cmp_dblur(StructRNA *srna)
   RNA_def_property_ui_text(prop, "Iterations", "");
   RNA_def_property_update(prop, NC_NODE | NA_EDITED, "rna_Node_update");
 
-  prop = RNA_def_property(srna, "use_wrap", PROP_BOOLEAN, PROP_NONE);
-  RNA_def_property_boolean_sdna(prop, NULL, "wrap", 1);
-  RNA_def_property_ui_text(prop, "Wrap", "");
-  RNA_def_property_update(prop, NC_NODE | NA_EDITED, "rna_Node_update");
-
   prop = RNA_def_property(srna, "center_x", PROP_FLOAT, PROP_NONE);
   RNA_def_property_float_sdna(prop, NULL, "center_x");
   RNA_def_property_range(prop, 0.0f, 1.0f);
